@@ -2,6 +2,7 @@ Version 1.20.3 *
 ==================
 - Fixed missing universe domain in Reference File Viewer.
 - Fixed selection of the default encoding.
+- Fixed dialog waiting for printer connection during Studio startup.
 - The encodings dialog starts with only a few encodings pre-selected.
 - When starting on a system with reduced available encodings, the users selection is protected.
 - Fixed Reset function in encodings dialog.
